tests/golden/errors/orphan_continuation.stderr
error[formatting]: blank lines may not appear inside a body
  --> orphan_continuation.kso:3:1
   3 |   >> print "two"
       ^
error[formatting]: an inline constant has no indented block
  --> orphan_continuation.kso:3:3
   3 |   >> print "two"
         ^
